Creados los formularios de listado de productos, creacion y detalle, puesto el paginador en el listado y carga los elementos desde la base de datos por medio de la api de productos.

--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -22,7 +22,7 @@
 
   <body class="text-dark bg-light text-justify" style="background-color: silver;">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg p-0 navbar-dark" style="background-color: green;" >
+    <nav class="navbar navbar-expand-lg p-0 navbar-light" style="background-color: #6dccaa;" >
       <div class="container">
         <img src="{% static 'core/img/maipogrande.png' %}" alt="Maipo Grande - Feria virtual" style="width: 50px; height:50px;">
         <h1 class="navbar-brand js-scroll-trigger"> Maipo Grande</h1>
@@ -73,7 +73,7 @@
     </nav>
 
     <!-- headers -->
-    <header class="p-2 text-center text-white" style="background-color: Green;">
+    <header class="p-2 text-center text-black" style="background-color: #6dccaa;">
         <h1>
           {% block titulo %}
           {% endblock %}
