--- a/maipogrande/core/templates/core/home-productor.html
+++ b/maipogrande/core/templates/core/home-productor.html
@@ -38,7 +38,7 @@
             </p>
             <p>
                 <a class="btn btn-block btn-success" 
-                    href="{% url 'listarProductos' %}" role="button"> Ir &raquo;</a>
+                    href="{% url 'actualizarListaDeProductos' %}" role="button"> Ir &raquo;</a>
             </p>
         </div>
         <div class="col-md-4">
