--- a/maipogrande/productor/templates/productor/producto-listar.html
+++ b/maipogrande/productor/templates/productor/producto-listar.html
@@ -7,21 +7,77 @@
 {% block contenido %}
     <!-- busqueda de productos por nombre -->
     <div class="row">
-        <div class="col col-10">
-            <form class="form-inline my-2 my-lg-0" action="" method="get" accept-charset="utf-8">
+        <div class="col col-6">
+            <form class="form-inline my-2 my-lg-0" action="{% url 'listaDeProductos' %}" method="get" accept-charset="utf-8">
                 <label class="control-label" for="buscar">Nombre producto :</label>
                 <input name="q" class="form-control mr-sm-2" type="text" aria-label="buscar" value="">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Buscar </button>
             </form>
         </div>
+        <div class="col col-1"></div>
         <div class="col col-2">
-            <a class="btn btn-primary" href="" role="button"> Nuevo producto</a>
+            <a class="btn btn-secondary" 
+                href="{% url 'actualizarListaDeProductos' %}" role="button"> Actualizar lista</a>
+        </div>
+        <div class="col col-1"></div>
+        <div class="col col-2">
+            <a class="btn btn-primary" 
+                href="{% url 'registrarProductos' %}" role="button"> Nuevo producto</a>
         </div>
     </div>
     <hr class="col-12">
     
     <!-- Listando los productos del productor -->
-    {% if productos %}
+    {% if producto_list %}
+        <table class="table table-responsive table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>Producto</th>
+                    <th>Valor por KG.</th>
+                    <th>Cantidad total (KG)</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for producto in producto_list %}
+                <tr><tr>
+                    <td>{{ producto.ProductName }}</td>
+                    <td>{{ producto.ProductValue }}</td>
+                    <td>{{ producto.ProductQuantity }}</td>
+                    <td>
+                        <a class="btn btn-light" 
+                            href="{{ producto.get_absolute_url }}" role="button"> Ver detalles </a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        <!-- Menú de paginación -->
+        {% if is_paginated %}
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    {% if page_obj.has_previous %}
+                        <li class="page-item "><a class="page-link" href="?page=1">&laquo;&laquo;</a></li>
+                        <li class="page-item "><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+                    {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&laquo;&laquo;</a></li>
+                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&laquo;</a></li>
+                    {% endif %}
+                    {% for i in paginator.page_range %}
+                        <li class="page-item {% if page_obj.number == i %}active{% endif %}"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                        <li class="page-item "><a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a></li><li class="page-item "><a class="page-link" href="?page=last">&raquo;&raquo;</a></li>
+                    {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&raquo;</a></li>
+                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&raquo;&raquo;</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+        {% endif %}
+
+    <!-- Aqui parte la seccion cuando no hay nada ingresado -->
     {% else %}
         <p class="lead text-justify">
             No tiene productos registrados aún, para ingresar 
