actualizar lista transportista

--- a/maipogrande/core/templates/core/home-transportista.html
+++ b/maipogrande/core/templates/core/home-transportista.html
@@ -37,7 +37,8 @@
                     <li>Visualizar el estado de sus transportes.</li>
                 </ul>
             </p>
-            <p><a class="btn btn-block btn-success" href="" role="button"> Ir &raquo;</a></p>
+            <p><a class="btn btn-block btn-success" 
+                href="{% url 'actualizarListaDeTransporte' %}" role="button"> Ir &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h3>Transacciones</h3>
