ver vehiculos transportista

--- a/maipogrande/transportista/templates/transportista/transporte-registrar.html
+++ b/maipogrande/transportista/templates/transportista/transporte-registrar.html
@@ -7,8 +7,7 @@ Registro de productos
 {% endblock %}
 
 {% block contenido %}
-<form class="text-justify border border-light p-5" method="post" id="vehicleForm"
-    urlCiudades="{% url 'cargarCiudades' %}">
+<form class="text-justify border border-light p-5" method="post" id="vehicleForm">
     <p class="lead text-center ">
         Ingrese los datos de su vehículo, cuando este listo, pulse el botón "Grabar".
     </p>
