--- a/maipogrande/transportista/templates/transportista/transporte-listar.html
+++ b/maipogrande/transportista/templates/transportista/transporte-listar.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block titulo %}
-Lista de productos registrados
+Lista de vehiculos registrados
 {% endblock %}
 
 {% block contenido %}
