Mantenedor de transportista y productor terminado

--- a/maipogrande/login/templates/login/login.html
+++ b/maipogrande/login/templates/login/login.html
@@ -9,7 +9,7 @@
 {% block contenido %}
   <form class="text-justify border border-light p-5" method="POST">
     <p class="lead mb-4">
-      Ingrese sus credenciales de inisio de sesión, luego presione el botón "Entrar".
+      Ingrese sus credenciales de inicio de sesión, luego presione el botón "Entrar".
     </p>
     <div class="form-group col-4">
     {% csrf_token %}
