--- a/maipogrande/productor/templates/productor/producto-detalle.html
+++ b/maipogrande/productor/templates/productor/producto-detalle.html
@@ -9,7 +9,7 @@
         El detalle del producto se muestra en la tabla siguiente, cabe señalar que 
         los valores indicados son aplicados según las medidas 
         estandares del pais del productor, por lo tanto, 
-        el valor esta expresado en dolares y el peso en kilogramos (KG).
+        el valor esta expresado en dólares y el peso en kilogramos (KG).
     </p>
     <div class="table-responsive justify-content-center">
         <table class="table table-striped table-hover col-6 bg-light border border-light p-5 text-justify text-black">
