--- a/maipogrande/transportista/templates/transportista/transporte-confirmareliminar.html
+++ b/maipogrande/transportista/templates/transportista/transporte-confirmareliminar.html
@@ -3,28 +3,27 @@
 {% load bootstrap %}
 
 {% block titulo %}
-    Eliminación de producto
+    Eliminación de transporte
 {% endblock %}
 
 {% block contenido %}
     <p class="lead text-center ">
-        {{ request.user.first_name|capfirst }} está a punto de quitar su producto con nombre {{ producto.ProductName }}
+        {{ request.user.first_name|capfirst }} esta a punto de quitar su transporte con patente {{ vehicle.VehiclePatent }}
         de nuestros registros.
-    </p>
     <div class="row mb-6">
     <div class="row">
         <div class="col col-12 text-center p-4">
             <p>
-                <h4 class="text-center">¿Está seguro de quitar su producto?</h4>
+                <h4 class="text-center">¿Está seguro de quitar su transporte?</h4>
             </p>
         </div>
     </div>
         <div class="row col-8 text-center">
             <div class="col col-4">
-                <a class="btn btn-danger" href="{{ producto.get_delete_url }}" role="button"> Eliminar </a>
+                <a class="btn btn-danger" href="{{ vehicle.get_delete_url }}" role="button"> Eliminar </a>
         </div>
         <div class="col col-4">
-            <a class="btn btn-success" href="{% url 'listaDeProductos' %}" role="button"> Cancelar </a>
+            <a class="btn btn-success" href="{% url 'listaDeTransporte' %}" role="button"> Cancelar </a>
         </div>
         </div>
     </div>
