--- a/maipogrande/transportista/templates/transportista/transporte-editar.html
+++ b/maipogrande/transportista/templates/transportista/transporte-editar.html
@@ -3,22 +3,23 @@
 {% load bootstrap %}
 
 {% block titulo %}
-Registro de transporte
+    Actualización de transportes
 {% endblock %}
 
 {% block contenido %}
-<form class="text-justify border border-light p-5" method="post" id="vehicleForm">
-    <p class="lead text-center ">
-        Ingrese los datos de su transporte, cuando este listo, pulse el botón "Grabar".
+
+<form class="text-justify border border-light p-5" method="post" id=vehicleForm>
+    <p class="lead text-center">
+        Actualice su transporte, cuando este listo, pulse el botón "Grabar".
     </p>
     <div class="form-row mb-4">
         {% csrf_token %}
         {% if form.non.field.errors %}
-        {{ form.non.field.errors }}
+            {{ form.non.field.errors }}
         {% endif %}
         {{ form|bootstrap }}
     </div>
-    <button type="submit" class="btn btn-success mt-3"> Grabar transporte </button>
+    <button type="submit" class="btn btn-success mt-3">Grabar</button>
     <a class="btn btn-light" href="{% url 'listaDeTransporte' %}" role="button"> Cancelar </a>
 </form>
 {% endblock %}
