--- a/maipogrande/productor/templates/productor/producto-detalle.html
+++ b/maipogrande/productor/templates/productor/producto-detalle.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base-inicial.html' %}
 
 {% block titulo %}
     Detalle de producto
@@ -12,32 +12,32 @@
         el valor esta expresado en dólares y el peso en kilogramos (KG).
     </p>
     <div class="table-responsive justify-content-center">
-        <table class="table table-striped table-hover col-6 bg-light border border-light p-5 text-justify text-black">
+        <table class="table table-striped table-hover col-sm-2 border border-light text-justify text-black">
             <tbody>
                 <tr>
-                    <td>Producto</td>
-                    <td>{{ producto.ProductName }}</td>
+                    <td class="py-0">Producto</td>
+                    <td class="py-0">{{ producto.ProductName }}</td>
                 </tr>
                 <tr>
-                    <td>Valor del kilogramo<br>Expresado en dolares</td>
-                    <td>{{ producto.ProductValue }}</td>
+                    <td class="py-0">Valor del kilogramo<br>Expresado en dolares</td>
+                    <td class="py-0">${{ producto.ProductValue }}</td>
                 </tr>
                 <tr>
-                    <td>Cantidad puesta a la venta<br>(en kilogramos (KG))</td>
-                    <td>{{ producto.ProductQuantity }}</td>
+                    <td class="py-0">Cantidad puesta a la venta<br>(en kilogramos (KG))</td>
+                    <td class="py-0">{{ producto.ProductQuantity }} (KG)</td>
                 </tr>
                 <tr>
-                    <td>Observaciones del producto</td>
-                    <td>{{ producto.Observation }}</td>
+                    <td class="py-0">Observaciones del producto</td>
+                    <td class="py-0">{{ producto.Observation }}</td>
                 </tr>
             </tbody>
         </table>
     </div>
     <br>
-    <a class="btn btn-light" 
+    <a class="btn btn-primary" 
         href="{{ producto.get_update_url }}" role="button"> Actualizar producto </a>
-    <a class="btn btn-light" 
-        href="{{ producto.get_confirmdelete_url }}" role="button"> Eliminar producto </a>
-    <a class="btn btn-light" 
-        href="{% url 'listaDeProductos' %}" role="button"> Volver </a>
+    <a class="btn btn-danger" 
+        href="{{ producto.get_delete_url }}" role="button"> Eliminar producto </a>
+    <a class="btn btn-success"
+        href="{% url 'listarProductos' %}" role="button"> Volver </a>
 {% endblock %}
