--- a/maipogrande/productor/templates/productor/producto-editar.html
+++ b/maipogrande/productor/templates/productor/producto-editar.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base-inicial.html' %}
 {% load static %}
 {% load bootstrap %}
 
@@ -7,19 +7,18 @@
 {% endblock %}
 
 {% block contenido %}
-
-<form class="text-justify border border-light p-5" method="post" id=productForm>
-    <p class="lead text-center">
-        Actualice su producto, cuando este listo, pulse el botón "Grabar".
-    </p>
-    <div class="form-row mb-4">
+    <form class="text-justify border border-light p-5" method="post" id=productForm>
+        <p class="lead text-center">
+            Actualice su producto, cuando este listo, pulse el botón "Grabar".
+        </p>
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        {{ form|bootstrap }}
-    </div>
-    <button type="submit" class="btn btn-success mt-3">Grabar</button>
-    <a class="btn btn-light" href="{% url 'listaDeProductos' %}" role="button"> Cancelar </a>
-</form>
+        <table class="tabla table-responsive">
+            {{ form }}
+        </table>
+        <button type="submit" class="btn btn-success mt-3">Actualizar producto</button>
+        <a class="btn btn-light" href="{% url 'listarProductos' %}" role="button"> Cancelar </a>
+    </form>
 {% endblock %}
