--- a/maipogrande/productor/templates/productor/producto-listar.html
+++ b/maipogrande/productor/templates/productor/producto-listar.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base-inicial.html' %}
 
 {% block titulo %}
     Lista de productos registrados
@@ -8,7 +8,7 @@
     <!-- busqueda de productos por nombre -->
     <div class="row">
         <div class="col col-6">
-            <form class="form-inline my-2 my-lg-0" action="{% url 'listaDeProductos' %}" method="get" accept-charset="utf-8">
+            <form class="form-inline my-2 my-lg-0" action="{% url 'listarProductos' %}" method="get" accept-charset="utf-8">
                 <label class="control-label" for="buscar">Nombre producto :</label>
                 <input name="q" class="form-control mr-sm-2" type="text" aria-label="buscar" value="">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Buscar </button>
@@ -17,12 +17,12 @@
         <div class="col col-1"></div>
         <div class="col col-2">
             <a class="btn btn-secondary" 
-                href="{% url 'actualizarListaDeProductos' %}" role="button"> Actualizar lista</a>
+                href="{% url 'actualizarListaProductos' %}" role="button"> Actualizar lista</a>
         </div>
         <div class="col col-1"></div>
         <div class="col col-2">
             <a class="btn btn-primary" 
-                href="{% url 'registrarProductos' %}" role="button"> Nuevo producto</a>
+                href="{% url 'registrarProducto' %}" role="button"> Nuevo producto</a>
         </div>
     </div>
     <hr class="col-12">
@@ -38,13 +38,13 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="py-0">
                 {% for producto in producto_list %}
-                <tr><tr>
-                    <td>{{ producto.ProductName }}</td>
-                    <td>{{ producto.ProductValue }}</td>
-                    <td>{{ producto.ProductQuantity }}</td>
-                    <td>
+                <tr>
+                    <td class="py-0">{{ producto.ProductName }}</td>
+                    <td class="text-right py-0">${{ producto.ProductValue }}</td>
+                    <td class="text-right py-0">{{ producto.ProductQuantity }} (KG)</td>
+                    <td class="py-0">
                         <a class="btn btn-light" 
                             href="{{ producto.get_absolute_url }}" role="button"> Ver detalles </a>
                     </td>
@@ -80,10 +80,8 @@
     <!-- Aqui parte la seccion cuando no hay nada ingresado -->
     {% else %}
         <p class="lead text-justify">
-            No tiene productos registrados aún, para ingresar 
-            un nuevo producto, presione el botón "Nuevo producto", posteriormente 
-            llene el formulario de registro siguiendo las instrucciones que 
-            el sistema le provee.
+            No hay productos registrados o 
+            la busqueda no produjo ningún resultado.<br>
         </p>
     {% endif %}
 
