Mosificado el modulo de transportistas, se incluye un ejemplo de pagina de presentacion.

--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/vendor/bootstrap/css/sticky-footer-navbar.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/menu.css' %}">
+	<link rel="stylesheet" href="{% static 'core/css/frontpage.css' %}">
 
     {% block jsHead %}
     {% endblock %}
