--- a/maipogrande/transportista/templates/transportista/vehiculo-detalle.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-detalle.html
@@ -37,6 +37,10 @@
                     {% else %}
                         <td class="py-0">No disponible</td>
                     {% endif %}
+                    <tr>
+                        <td class="py-0">Observación</td>
+                        <td class="py-0">{{ vehicle.Observation }}(KG)</td>
+                    </tr>
                 </tr>
             </tbody>
         </table>
