--- a/maipogrande/productor/templates/productor/producto-detalle.html
+++ b/maipogrande/productor/templates/productor/producto-detalle.html
@@ -19,6 +19,10 @@
                     <td class="py-0">{{ producto.ProductName }}</td>
                 </tr>
                 <tr>
+                    <td class="py-0">Categoría</td>
+                    <td class="py-0">{{ producto.Category.CategoryName }}</td>
+                </tr>
+                <tr>
                     <td class="py-0">Valor del kilogramo<br>Expresado en dolares</td>
                     <td class="py-0">${{ producto.ProductValue }}</td>
                 </tr>
