Carga de productos por ajax se realilza correctamente, se ajusta el formulario de ordenes de compra en forma inline y graba localmente.

--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -10,7 +10,9 @@
     <p class="text-justify"><b>Ordenes de compra</b></p>
     <a class="enlace" href="{% url 'listarOrdenes' %}">Lista de ordenes</a>
     <br>
-    <a class="enlace" href="{% url 'registrarOrden' %}">Nueva orden de compra</a>
+    <a class="enlace" href="{% url 'registrarOrden' %}"> Nueva orden </a>
+    <br>
+    <a class="enlace" href="#"> Confirmar orden </a>
 
 {% endblock %}
 
@@ -22,6 +24,11 @@
         apartado izquierdo, podrá realizar las acciones que usted 
         requiera para cubrir sus necesidades.
     </p>
+    {% if product_list %}
+        <p class="lead">
+            Tenemos mas de {{ product_list.count }} para ofrecer a usted.
+        </p>
+    {% endif %}
     <div class="row">
         <div class="col-md-4">
             <h3>datos comerciales</h3>
@@ -54,4 +61,21 @@
             </p>
         </div>
     </div>
+{% endblock %}
+
+{% block jsBody %}
+    <script>
+        $( document ).ready(function() {
+            // cargar productos de exportacion
+            $.ajax({url: "{% url 'cargarProductosExportacion' %}",
+                success: function () { 
+                console.log('productos de exportación cargados...!!');}
+            });
+            // Cargar datos comerciales
+            $.ajax({url: "{% url 'cargarComercial' %}",
+                success: function () { 
+                console.log('Pase por aqui!!');}
+            });
+        });
+    </script>
 {% endblock %}
