--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -20,10 +20,10 @@
     {% endblock %}
   </head>
 
-  <body class="text-dark bg-light text-justify" style="background-color: silver;">
+  <body class="container-fluid text-dark bg-light text-justify">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-sm p-0 navbar-light bg-success">
-      <div class="container">
+    <nav class="navbar navbar-expand-sm p-3 navbar-light bg-success">
+      <div class="container-fluid">
         <img src="{% static 'core/img/maipogrande.png' %}" alt="Maipo Grande - Feria virtual" style="width: 50px; height:50px;">
         <h1 class="navbar-brand js-scroll-trigger"> Maipo Grande</h1>
         <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,9 +119,9 @@
 
 
     <!-- carga de script -->
-    <script type="text/plain" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
-    <script type="text/plain" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script type="text/plain" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
     {% block jsBody %}
     {% endblock %}
 
