--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -15,12 +15,12 @@
 {% block contenido %}
 
   <!-- Header -->
-  <header class="bg-danger py-5 mb-5">
+  <header class="bg-light py-5 mb-5">
     <div class="container-fluid h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Zona de transportistas</h1>
-          <p class="lead mb-5 text-light">
+          <h1 class="display-4 text-black mt-5 mb-2">Zona de transportistas</h1>
+          <p class="lead mb-5 text-black">
             Bienvenido a la zona de transportistas de la plataforma, 
             en esta podrá realizar todas sus actividades
             de forma exclusiva, esperamos que sea de su satisfacción, en el 
