--- a/maipogrande/productor/templates/productor/home-productor.html
+++ b/maipogrande/productor/templates/productor/home-productor.html
@@ -10,7 +10,8 @@
     <p class="text-justify"><b>Productos</b></p>
     <a class="enlace" href="{% url 'actualizarListaProductos' %}">Lista de productos</a>
     <a class="enlace" href="{% url 'registrarProducto' %}">Agregar producto</a>
-
+    <p class="text-justify"><b>Contratos</b></p>
+    <a class="enlace" href="{% url 'listarContratos' %}">Lista de contratos</a>
 {% endblock %}
 
 {% block contenido %}
