--- a/maipogrande/cexterno/templates/cexterno/orden-listar.html
+++ b/maipogrande/cexterno/templates/cexterno/orden-listar.html
@@ -8,8 +8,10 @@
     <div class="row">
         <div class="col col-6">
             <form class="form-inline my-2 my-lg-0" action="{% url 'listarOrdenes' %}" method="get" accept-charset="utf-8">
-                <label class="control-label" for="buscar">Fecha :</label>
-                <input name="q" class="form-control mr-sm-2" type="text" aria-label="buscar" value="">
+                <label class="control-label" for="buscar">Fecha desde:</label>
+                <input name="q1" class="form-control mr-sm-2" type="date" aria-label="buscar" value="">
+                <label class="control-label" for="buscar">Hasta:</label>
+                <input name="q2" class="form-control mr-sm-2" type="date" aria-label="buscar" value="">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Buscar </button>
             </form>
         </div>
