input type validations

--- a/maipogrande/dcomercial/templates/dcomercial/comercial-editar.html
+++ b/maipogrande/dcomercial/templates/dcomercial/comercial-editar.html
@@ -19,7 +19,7 @@
             {{ form|bootstrap }}
         </div>
         <button type="submit" class="btn btn-success mt-3">Grabar</button>
-        <a class="btn btn-light" href="#" role="button"> Cancelar </a>
+        <a class="btn btn-light" href="{% url 'dinamicHome' %}" role="button"> Cancelar </a>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
