--- a/maipogrande/dcomercial/templates/dcomercial/comercial-ver.html
+++ b/maipogrande/dcomercial/templates/dcomercial/comercial-ver.html
@@ -17,7 +17,7 @@
                     <td>Identificación de la empresa</td>
                     <td>
                         {{ comercial.CompanyName }}<br>
-                        "{{ comercial.FantasyName }}<"<br>
+                        "{{ comercial.FantasyName }}"<br>
                         Rut/Dni: {{ comercial.ComercialDNI }}<br>
                         Giro: {{ comercial.ComercialBusiness }}
                     </td>
