Validaciones formulario productor y transportista

--- a/maipogrande/transportista/templates/transportista/vehiculo-detalle.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-detalle.html
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <td class="py-0">Modelo</td>
-                    <td class="py-0">{{ vehicle.VehicleModel }} (KG)</td>
+                    <td class="py-0">{{ vehicle.VehicleModel }}</td>
                 </tr>
                 <tr>
                     <td class="py-0">Tipo de transporte</td>
@@ -39,7 +39,7 @@
                     {% endif %}
                     <tr>
                         <td class="py-0">Observación</td>
-                        <td class="py-0">{{ vehicle.Observation }}(KG)</td>
+                        <td class="py-0">{{ vehicle.Observation }}</td>
                     </tr>
                 </tr>
             </tbody>
