--- a/maipogrande/cexterno/templates/cexterno/orden-editar.html
+++ b/maipogrande/cexterno/templates/cexterno/orden-editar.html
@@ -1,122 +1,121 @@
 {% extends 'core/base-inicial.html' %}
 {% load static %}
 {% block titulo %}
-    Actualización de ordenes de compra
+    Actualización de orden de compra
 {% endblock %}
 
 {% block contenido %}
-    {% if not comercial %}
-        <p class="lead">
-            Hemos notado que aún no ha ingresado sus datos comerciales, 
-            esta información es relevante para que pueda realizar ventas 
-            en la plataforma, por favor, ingrese estos datos lo antes 
-            posible.<br>
-            Si desea ingresarlos en este momento, pulse el botón "Crear" para iniciar el 
-            proceso de registro.
-        </p>
-        <a class="btn btn-primary " href="{% url 'registrarComercial' %}" role="button"> Crear datos comerciales </a>
-        <a class="btn btn-light" href="{% url 'dinamicHome' %}" role="button"> Volver </a>
-        {% else %}
-            <p class="small">
-                edite su orden de compra, una vez que este listo, pulse
-                el botón "Actualizar orden".<br>
-                procesaremos su orden de compra y notificaremos por correo 
-                electrónico cuando tengamos las mejores ofertas para usted, 
-                posteriormente podrá aceptar la propuesta para luego seguir con el 
-                proceso de compra de los productos solicitados.
-            </p>
-            <h4>Datos de la orden de compra</h4>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <form method="post" action="">
-                        {% csrf_token %}
-                        <!-- Datos comerciales -->
-                        <div class="row">
-                            <div class="col-lg-4">
-                                Empresa: {{ comercial.CompanyName}}
-                            </div>
-                            <div class="col-lg-4">
-                                Nombre de fantasía: {{ comercial.FantasyName}}
-                            </div>
-                            <div class="col-lg-4">
-                                Giro comercial: {{ comercial.ComercialBusiness}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                DNI: {{ comercial.ComercialDNI }}
-                            </div>
-                            <div class="col-lg-4">
-                                Email: {{ comercial.Email }}
-                            </div>
-                            <div class="col-lg-4">
-                                Teléfono: {{ comercial.PhoneNumber }}
-                            </div>
-                        </div>
-                        <div class="row py-1, px-2">
-                            <div class="col-lg-4">
-                                Dirección: {{ comercial.Address }}
-                            </div>
-                            <div class="col-lg-4">
-                                Ciudad: {{ comercial.City.CityName }}
-                            </div>
-                            <div class="col-lg-4">
-                                País: {{ comercial.Country.CountryName }}
-                            </div>
-                        </div>
-
-                        <!-- Datos del formulario de orden de compra -->
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <label>Fecha</label>
-                                {{ form.OrderDate }}
-                            </div>
-                            <div class="col-lg-4">
-                                <label>Condición de pago</label>
-                                {{ form.PaymentCondition }}
-                            </div>
-                            <div class="col-lg-4">
-                                <label>Descuento</label>
-                                {{ form.OrderDiscount }}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <label>Observación :</label>
-                                {{ form.Observation }}
-                            </div>
-                        </div>
-                        <br><br>
-
-                        <!-- formulario de detalle de orden de compra -->
-                        <h4>Detalle de orden de compra</h4>
-                        {{ order_detail.management_form }}
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <label>Producto</label>
-                            </div>
-                            <div class="col-lg-4">
-                                <label>Cantidad</label>
-                            </div>
-                        </div>
-                        {% for detalle in order_detail %}
-                            <div class="row">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        {{ detalle.Product }}
-                                    </div>
-                                    <div class="col-lg-4">
-                                        {{ detalle.Quantity}}
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-                        <br><br>
-                        <button class="btn btn-lg btn-success" type="submit"> Actualizar orden </button>
-                        <a class="btn btn-light" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
-                    </form>
+    <p class="small">
+        actualice su orden de compra, una vez que este listo, pulse
+        el botón "Actualizar orden".<br>
+        Recuerde que una vez procesada su orden de compra, 
+        esta ya no podrá ser actualizada.
+    </p>
+    <h4>Datos de la orden de compra</h4>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form id="form-container" method="post" action="">
+                {% csrf_token %}
+                <!-- Datos comerciales -->
+                <div class="row">
+                    <div class="col-lg-4">
+                        Empresa: {{ comercial.CompanyName}}
+                    </div>
+                    <div class="col-lg-4">
+                        Nombre de fantasía: {{ comercial.FantasyName}}
+                    </div>
+                    <div class="col-lg-4">
+                        Giro comercial: {{ comercial.ComercialBusiness}}
+                    </div>
                 </div>
-            </div>
-            <br><br>
-    {% endif %}
+                <div class="row">
+                    <div class="col-lg-4">
+                        DNI: {{ comercial.ComercialDNI }}
+                    </div>
+                    <div class="col-lg-4">
+                        Email: {{ comercial.Email }}
+                    </div>
+                    <div class="col-lg-4">
+                        Teléfono: {{ comercial.PhoneNumber }}
+                    </div>
+                </div>
+                <div class="row py-1, px-2">
+                    <div class="col-lg-4">
+                        Dirección: {{ comercial.Address }}
+                    </div>
+                    <div class="col-lg-4">
+                        Ciudad: {{ comercial.City.CityName }}
+                    </div>
+                    <div class="col-lg-4">
+                        País: {{ comercial.Country.CountryName }}
+                    </div>
+                </div>
+
+                <!-- Datos del formulario de orden de compra -->
+                <div class="row">
+                    <div class="col-lg-4">
+                        <label>Fecha</label>
+                        {{ form.OrderDate }}
+                    </div>
+                    <div class="col-lg-4">
+                        <label>Condición de pago</label>
+                        {{ form.PaymentCondition }}
+                    </div>
+                    <div class="col-lg-4">
+                        <label>Descuento</label>
+                        {{ form.OrderDiscount }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <label>Observación :</label>
+                        {{ form.Observation }}
+                    </div>
+                </div>
+                <br><br>
+
+                <!-- formulario de detalle de orden de compra -->
+                <h4>Detalle de orden de compra</h4>
+                {{ order_detail.management_form }}
+                <table class="col-md-7 table-responsive">
+                    <thead>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th></th>
+                    </thead>
+                    {% for detalle in order_detail %}
+                    <tr class="{% cycle 'row1' 'row2' %} formset_row-{{ order_detail.prefix }}">
+                        {% for field in detalle.visible_fields %}
+                        <td>
+                            {# Include the hidden fields in the form #}
+                            {% if forloop.first %}
+                                {% for hidden in detalle.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+                            {% endif %}
+                            {{ field.errors.as_ul }}
+                            {{ field }}
+                        </td>
+                        {% endfor %}
+                    </tr>
+                    {% endfor %}
+                </table>
+                <br><br><br>
+                <button class="btn btn-lg btn-success" type="submit"> Actualizar orden </button>
+                <a class="btn btn-light" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
+            </form>
+        </div>
+    </div>
+    <br><br>
+{% endblock %}
+
+{% block jsBody %}
+<script src='{% static "core/vendor/jquery/jquery.formset.js" %}'></script>
+<script type="text/javascript">
+    $('.formset_row-{{ order_detail.prefix }}').formset({
+        addText: 'agregar producto',
+        deleteText: 'quitar',
+        prefix: '{{ order_detail.prefix }}',
+    });
+</script>
 {% endblock %}
