--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -8,7 +8,7 @@
     <a class="enlace" href="{% url 'iniciarComercial' %}">Datos comerciales</a>
     <br><br>
     <p class="text-justify"><b>Vehiculos</b></p>
-    <a class="enlace" href="{% url 'actualizarListaVehiculos' %}">Lista de vehiculos</a>
+    <a class="enlace" href="{% url 'actualizarListaVehiculos' %}">Lista de vehiculos</a><br>
     <a class="enlace" href="{% url 'registrarVehiculo' %}">Agregar vehiculo</a>
     <p class="text-justify"><b>Contratos</b></p>
     <a class="enlace" href="{% url 'listarContratos' %}">Lista de contratos</a>
